--- a/App Files/views/startApp.jade
+++ b/App Files/views/startApp.jade
@@ -3,7 +3,7 @@ extends layout
 block content
 	body
 		.col-lg-12.col-md-12.col-sm-12.col-xs-12
-			h1(id="title") Welcome
+			h1(id="title") Welcome to "Digital Tool Belt"
 		.form-group.col-lg-4.col-md-6.col-sm-12.col-xs-12
 			a(class="btn btn-default btn-lg btn-block", href="/fieldEngrHome", role=button)
 				h2 Field Engineer 
