--- a/App Files/views/showresults.jade
+++ b/App Files/views/showresults.jade
@@ -1,16 +1,30 @@
-extends layout
-
-//-doctype html 
-//-added doctype html as per web best practices
-block content
-    h2 Show Results
-    table(border='1', class="table-hover").table
+doctype html 
+html
+  head
+    title Show Results
+    link(rel='stylesheet', href='/stylesheets/style.css')
+  body
+    case severity
+        when "High Penalty"
+            h2.highSeverity Show Results
+        when "Penalty"
+            h2.highSeverity Show Results
+        when "Urgency"
+            h2.mediumSeverity Show Results
+        when "Regular"
+            h2.lowSeverity Show Results
+        default
+            h2.lowSeverity Show Results
+    table(border='1')
         tr
-            td Name:
-            td #{fename}
-        tr
-            td Location:
+            td location:
             td #{location}
         tr
-            td Email:
+            td name:
+            td #{fename}
+        tr
+            td name:
             td #{feemail}
+        tr
+            td severity:
+            td #{severity}
