--- a/App Files/views/startApp_2.jade
+++ b/App Files/views/startApp_2.jade
@@ -1,8 +1,7 @@
 extends layout
 
 block content
-    h1= "Digital Tool Belt"
-    h1= "Field Engineer"
+
     nav.navbar.navbar-default(role='navigation')
         .container-fluid
             //
@@ -13,15 +12,17 @@ block content
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-             // a.navbar-brand(href='#') Field Engineer
+              a.navbar-brand(href='#') #{title}
             //
                Collect the nav links, forms, and other content for toggling 
             #bs-example-navbar-collapse-1.collapse.navbar-collapse
               ul.nav.navbar-nav
                 li.active
-                  a(href='/startApp') Home
+                  a(href='/fieldEngr') Field Engineer
                 li.active
-                  a(href='/listRequest') List Service Requests
+                  a(href='/fieldEngrMngHome') Field Engineer Manager
+                li.active
+                  a(href='/toolMngHome') Tool Manager                             
               ul.nav.navbar-nav.navbar-right
                 
             //
@@ -29,5 +30,5 @@ block content
           //
              /.container-fluid 
 
-    
-    
+    h1= title
+    p Welcome to #{title}
